--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -34,6 +34,8 @@ QUEST-ACCEPT-WAY-COMMON: "主动接受"
 
 TEMPLATE-NO_FILES: "{0}&r &6template &8文件夹&c不存在，&8开始创建 &6template &8文件夹"
 
+GROUP-NO_FILES: "{0}&r &6group &8文件夹&c不存在，&8开始创建 &6group &8文件夹"
+
 ITEM-NO_FILES: "{0}&r &6item &8文件夹&c不存在，&8开始创建 &6item &8文件夹"
 ITEM-EXIST-ID: "&7&l[ &c&li &7&l]&c 物品ID已存在： &8{0}"
 ITEM-NOT-SAVE: "&7&l[ &c&li &7&l]&c 错误物品无法存储： &8{0}"
@@ -63,646 +65,9 @@ TAGS-LIST-FORMAT: "&f     - &7{0}"
 COMMAND-SUCCESSFUL_RELOAD: "&7&l[ &c&li &7&l]&f 已重载 &3&lQuestEngine &f配置文件"
 COMMAND-ITEM-SAVE: "&7&l[ &c&li &7&l]&f 保存了物品配置： &8{0}"
 
-EXIT_TARGET_ID: "&c&l i &f当前任务 &7{0} &f已有相同的目标编号"
 
-EDIT_BOOK_QUEST_ID: "添加任务-任务编号"
-EDIT_BOOK_QUEST_PATH: "添加任务-任务路径"
-EDIT_BOOK_QUEST_NAME: "添加任务-任务名称"
-EDIT_BOOK_QUEST_NOTE: "编辑任务-任务笔记描述"
-EDIT_BOOK_QUEST_ACCEPT_CONDITION: "编辑任务-任务接受条件"
-EDIT_BOOK_QUEST_MODE: "编辑任务-任务模式"
-EDIT_BOOK_QUEST_CONTROL: "编辑任务-触发器控制框架"
-EDIT_BOOK_QUEST_TARGET: "编辑任务-目标编号"
-EDIT_BOOK_EVENT_TASK_ID: "编辑任务-定时器事件编号"
-EDIT_BOOK_EVENT_TASK_PERIOD: "编辑任务-定时器事件时间"
-EDIT_BOOK_EVENT_TASK_CONDITION: "编辑任务-定时器事件条件"
-EDIT_BOOK_EVENT_NODE: "编辑任务-目标事件编辑"
-EDIT_BOOK_TARGET_NOTE: "编辑任务-目标笔记描述"
 
-PREVIOUS_PAGE: "&a&l上一页"
-NEXT_PAGE: "&a&l下一页"
-CLOSE_UI: "&c&l关闭"
-HOME_CLOSE_UI:
-  - "&c&l关闭"
-  - "&f"
 
-EDIT_BOOK_OPEN: "&7右键打开并编辑"
-EDIT_BOOK_DELETE: "&c编辑后销毁书本"
-EDIT_BOOK_KEEP: "&a编辑后保留书本"
 
-EDIT_INPUT_ADD_TARGET:
-  - "下一行输入目标编号"
 
-EDIT_INPUT_ADD_CONTROL:
-  - "下一行输入控制框架编号"
 
-EDIT_INPUT_ADD_QUEST_ID:
-  - "下一行输入任务编号"
-EDIT_INPUT_ADD_QUEST_PATH:
-  - "下一行编辑文件路径"
-  - "default\\example.yml"
-EDIT_INPUT_ADD_QUEST_NAME:
-  - "下一行输入任务名称"
-
-EDIT_BOOK_QUEST_RENAME: "编辑任务-任务名称"
-EDIT_INPUT_QUEST_RENAME:
-  - "下一行编辑任务名称"
-  - "{0}"
-
-EDIT_INPUT_TIME_START:
-  - "下一行编辑起始时间"
-  - "时:分:秒"
-  - "-------------------"
-  - "格式提示 00:00:00"
-
-EDIT_INPUT_TIME_END:
-  - "下一行编辑终止时间"
-  - "时:分:秒"
-  - "-------------------"
-  - "格式提示 23:59:59"
-
-EDIT_INPUT_WEEK_START:
-  - "下一行编辑起始的星期"
-  - "?"
-  - "-------------------"
-  - "1为上周日，2为本周一，3为本周二，以此类推"
-
-EDIT_INPUT_WEEK_END:
-  - "下一行编辑终止的星期"
-  - "?"
-  - "-------------------"
-  - "1为上周日，2为本周一，3为本周二，以此类推"
-
-EDIT_INPUT_MONTH_START:
-  - "下一行编辑起始的日份"
-  - "?"
-
-EDIT_INPUT_MONTH_END:
-  - "下一行编辑终止的日份"
-  - "?"
-
-EDIT_INPUT_YEAR_START:
-  - "下一行编辑起始的月日"
-  - "月份,日份"
-  - "-------------------"
-  - "格式提示 6,15"
-
-EDIT_INPUT_YEAR_END:
-  - "下一行编辑终止的月日"
-  - "月份,日份"
-  - "-------------------"
-  - "格式提示 11,1"
-
-EDIT_INPUT_TIME_CUSTOM:
-  - "下一行编辑时间段"
-  - "时间单位 数字"
-  - "-------------------"
-  - "格式提示： m 5"
-  - "s 10 代表10秒"
-  - "m 5 代表5分钟"
-  - "h 6 代表6小时"
-
-EDIT_INPUT_EVENT_TASK_ID:
-  - "下一行输入定时器编号"
-EDIT_INPUT_EVENT_TASK_PERIOD:
-  - "下行编辑时间(20等于1秒)"
-  - "{0}"
-
-EDIT_UI_HOME: "任务编辑器 | 主页面"
-EDIT_UI_QUEST: "任务编辑器 | 任务"
-EDIT_UI_QUEST_LIST: "任务编辑器 | 任务列表"
-EDIT_UI_QUEST_NOTE: "任务编辑器 | 任务笔记"
-EDIT_UI_QUEST_CONTROL_LIST: "任务编辑器 | 任务控制框架列表"
-EDIT_UI_QUEST_CONTROL: "任务编辑器 | 任务控制框架"
-EDIT_UI_TARGET_CONTROL_LIST: "任务编辑器 | 目标控制框架列表"
-EDIT_UI_TARGET_CONTROL: "任务编辑器 | 目标控制框架"
-EDIT_UI_CONTROL: "任务编辑器 | 控制框架"
-EDIT_UI_CONTROL_TYPE: "任务编辑器 | 控制框架选择触发器"
-EDIT_UI_CONTROL_SELECT: "任务编辑器 | 控制框架选择对象"
-EDIT_UI_TARGET_LIST: "任务编辑器 | 目标条目列表"
-EDIT_UI_TARGET: "任务编辑器 | 目标条目"
-EDIT_UI_QUEST_ACCEPT: "任务编辑器 | 任务接受模式"
-EDIT_UI_QUEST_TIME: "任务编辑器 | 时间组件"
-EDIT_UI_QUEST_TIME_TYPE: "任务编辑器 | 选择时间类型"
-EDIT_UI_QUEST_MODE: "任务编辑器 | 任务模式"
-EDIT_UI_TARGET_EVENT_LIST: "任务编辑器 | 选择目标事件"
-EDIT_UI_TARGET_EVENT_NODE: "任务编辑器 | 目标事件节点"
-EDIT_UI_GROUP_LIST: "任务编辑器 | 任务组列表"
-
-EDIT_UI_ADD_QUEST:
-  - "     &8&o点击添加任务"
-  - "&f"
-EDIT_UI_LIST_QUEST:
-  - "     &8&o点击查看任务列表"
-  - "&f"
-EDIT_UI_QUEST_GROUP:
-  - "     &8&o点击编辑任务组"
-  - "&f"
-
-EDIT_BACK_QUEST_HOME:
-  - "     &8&o返回任务编辑器主页面"
-  - "&f"
-
-EDIT_BACK_QUEST_LIST:
-  - "     &8&o返回任务编辑器任务列表"
-  - "&f"
-
-EDIT_QUEST_RENAME:
-  - "     &f{0}"
-  - "&f"
-  - "     &8&o点击重命名任务名称"
-  - "&f"
-EDIT_QUEST_NOTE:
-  - "     &8&o设置任务笔记"
-  - "&f"
-EDIT_QUEST_ACCEPT:
-  - "     &6接受模式：&f{0}"
-  - "&f"
-  - "     &8&o设置接受模式"
-  - "&f"
-EDIT_QUEST_TIME:
-  - "     &6时间设定：&f{0}"
-  - "&f"
-  - "     &8&o设置时间框架"
-  - "&f"
-EDIT_QUEST_MODE:
-  - "     &6模式：&f{0}"
-  - "     &6成员上限：&f{1}"
-  - "     &6共享数据：&f{2}"
-  - "&f"
-  - "     &8&o设置任务成员模式"
-  - "&f"
-EDIT_QUEST_CONTROL:
-  - "     &8&o设置触发器控制框架"
-  - "&f"
-EDIT_QUEST_TARGET:
-  - "     &8&o设置任务目标框架"
-  - "&f"
-
-EDIT_QUEST_LIST:
-  - "     &f[[quest name]]"
-  - "&f"
-  - "     &8&o点击编辑任务"
-  - "&f"
-
-EDIT_GROUP_LIST:
-  - "     &7(&f{0}&7) &f{1}"
-  - "&f"
-  - "     &8&o点击编辑任务组"
-  - "&f"
-
-EDIT_BACK_QUEST_EDIT:
-  - "     &8&o返回编辑任务 &f[[quest name]]"
-  - "&f"
-EDIT_QUEST_NOTE_PREVIEW:
-  - "     &f预览任务笔记："
-  - "&f"
-  - "__List__"
-  - "&f"
-
-EDIT_QUEST_NOTE_EDIT:
-  - "     &8&o编辑任务笔记内容"
-  - "&f"
-
-EDIT_CONTROL_LIST:
-  - "     &f{0}"
-  - "&f"
-  - "     &8&o点击编辑控制框架内容"
-  - "&f"
-
-EDIT_CONTROL_ADD:
-  - "     &8&o点击添加触发器控制框架"
-  - "&f"
-
-EDIT_BACK_QUEST_CONTROL_EDIT:
-  - "     &8&o返回任务控制框架 &f{0}"
-  - "&f"
-EDIT_BACK_TARGET_CONTROL_EDIT:
-  - "     &8&o返回目标控制框架 &f{0}"
-  - "&f"
-
-EDIT_BACK_QUEST_CONTROL_LIST:
-  - "     &8&o返回任务控制框架列表 &f{0}"
-  - "&f"
-EDIT_BACK_TARGET_CONTROL_LIST:
-  - "     &8&o返回目标控制框架列表 &f{0}"
-  - "&f"
-EDIT_CONTROL_SELECT:
-  - "     &6执行脚本的对象：&f{0}"
-  - "&f"
-  - "     &8&o点击选择脚本对象"
-  - "&f"
-EDIT_CONTROL_TYPE:
-  - "     &6脚本触发器：&f{0}"
-  - "&f"
-  - "     &8&o点击选择触发脚本方式"
-  - "&f"
-EDIT_CONTROL_SCRIPT:
-  - "     &6脚本："
-  - "&f"
-  - "__List__"
-  - "&f"
-  - "     &8&o左键点击编辑脚本"
-  - "     &8&o右键点击预览脚本"
-  - "&f"
-EDIT_CONTROL_SCRIPT_ERROR:
-  - "     &6脚本："
-  - "&f"
-  - "__List__"
-  - "&f"
-  - "     &8&o左键点击编辑脚本"
-  - "     &8&o右键点击预览脚本"
-  - "&f"
-EDIT_CONTROL_DELETE:
-  - "     &c&l点击删除该控制框架"
-  - "&f"
-
-EDIT_TARGET_LIST:
-  - "     &f{0}"
-  - "&f"
-  - "     &8&o点击编辑目标条目"
-  - "&f"
-EDIT_TARGET_ADD:
-  - "     &8&o点击添加目标条目"
-  - "&f"
-
-EDIT_BACK_TARGET_LIST:
-  - "     &8&o返回目标条目列表 &f[[quest name]]"
-  - "&f"
-EDIT_TARGET_EVENT:
-    - "     &6事件：&f{0}"
-    - "&f"
-    - "     &8&o点击设置事件条目"
-    - "&f"
-EDIT_TARGET_NOTE:
-  - "     &6预览目标笔记："
-  - "&f"
-  - "__List__"
-  - "&f"
-  - "     &8&o点击编辑目标笔记"
-  - "&f"
-EDIT_TARGET_TRIGGER:
-  - "     &8&o设置触发器控制框架"
-  - "&f"
-
-EDIT_QUEST_ACCEPT_TOGGLE:
-  - "     &6接受模式：&f{0}"
-  - "&f"
-  - "     &8&o点击切换接受模式"
-  - "&f"
-
-EDIT_QUEST_ACCEPT_CONDITION:
-  - "     &6接受任务条件："
-  - "&f"
-  - "__List__"
-  - "&f"
-  - "     &6条件返回值：&f{0}"
-  - "&f"
-  - "     &8&o点击编辑脚本"
-  - "&f"
-
-EDIT_QUEST_TIME_TYPE:
-  - "     &6时间类型：&f{0}"
-  - "&f"
-  - "     &8&o点击选择时间类型"
-  - "&f"
-
-EDIT_QUEST_TIME_DURATION:
-  - "     &6时间设定：&f{0}"
-  - "&f"
-  - "     &6原格式：&f{1}"
-  - "&f"
-  - "     &8&o点击编辑时间设定"
-  - "&f"
-
-EDIT_QUEST_TIME_RESET:
-  - "     &6是否周期性重置任务：&f{0}"
-  - "&f"
-  - "     &f解释：&7如果开启，任务将在下一周期自动"
-  - "  &7重置任务。否则超出限时后任务状态永远是完"
-  - "  &7成或者失败状态"
-  - "&f"
-  - "     &8&o点击切换"
-  - "&f"
-
-EDIT_BACK_TIME_EDIT:
-  - "     &8&o返回编辑任务时间组件 &f[[quest name]]"
-  - "&f"
-EDIT_QUEST_TIME_ALWAYS:
-  - "     &a不限时"
-  - "&f"
-  - "     &8&o点击选定"
-  - "&f"
-EDIT_QUEST_TIME_DAY:
-  - "     &a每天"
-  - "&f"
-  - "     &8&o点击选定"
-  - "&f"
-EDIT_QUEST_TIME_WEEKLY:
-  - "     &a每周"
-  - "&f"
-  - "     &8&o点击选定"
-  - "&f"
-EDIT_QUEST_TIME_MONTHLY:
-  - "     &a每月"
-  - "&f"
-  - "     &8&o点击选定"
-  - "&f"
-EDIT_QUEST_TIME_YEARLY:
-  - "     &a每年"
-  - "&f"
-  - "     &8&o点击选定"
-  - "&f"
-EDIT_QUEST_TIME_CUSTOM:
-  - "     &a时间段"
-  - "&f"
-  - "     &8&o点击选定"
-  - "&f"
-
-EDIT_QUEST_MODE_TYPE:
-  - "     &6模式：&f{0}"
-  - "&f"
-  - "     &8&o点击切换模式"
-  - "&f"
-EDIT_QUEST_MODE_AMOUNT:
-  - "     &6成员上限：&f{0}"
-  - "&f"
-  - "     &8&o点击编辑成员上限&f(&7协同模式下可编辑&f)"
-  - "&f"
-EDIT_QUEST_MODE_SHARE:
-  - "     &6共享数据：&f{0}"
-  - "&f"
-  - "     &8&o点击切换&f(&7协同模式下可切换&f)"
-  - "&f"
-
-EDIT_BACK_TARGET_EDIT:
-  - "     &8&o返回编辑目标 &f[[target id]]"
-  - "&f"
-
-EDIT_BACK_EVENT_EDIT:
-  - "     &8&o返回编辑目标事件节点 &f[[target id]]"
-  - "&f"
-
-EDIT_CONTROL_TYPE_ACCEPT:
-  - "     &a接受"
-  - "&f"
-  - "     &8&o点击选定"
-  - "&f"
-EDIT_CONTROL_TYPE_FINISH:
-  - "     &b完成"
-  - "&f"
-  - "     &8&o点击选定"
-  - "&f"
-EDIT_CONTROL_TYPE_FAIL:
-  - "     &c失败"
-  - "&f"
-  - "     &8&o点击选定"
-  - "&f"
-EDIT_CONTROL_TYPE_QUIT:
-  - "     &f放弃"
-  - "&f"
-  - "     &8&o点击选定"
-  - "&f"
-EDIT_CONTROL_TYPE_RESET:
-  - "     &6重置"
-  - "&f"
-  - "     &8&o点击选定"
-  - "&f"
-
-EDIT_CONTROL_SELECT_SELF:
-  - "     &a脚本对触发者执行"
-  - "&f"
-  - "     &8&o点击选定"
-  - "&f"
-EDIT_CONTROL_SELECT_TEAM:
-  - "     &b脚本对队伍所有成员执行"
-  - "&f"
-  - "     &8&o点击选定"
-  - "&f"
-EDIT_CONTROL_SELECT_ALL:
-  - "     &6脚本对在线所有玩家执行"
-  - "&f"
-  - "     &8&o点击选定"
-  - "&f"
-
-EDIT_TARGET_EVENT_CHANGE:
-  - "     &6选择事件"
-  - "&f"
-  - "     &8&o点击进行选择事件"
-  - "&f"
-EDIT_TARGET_SELECT_EVENT:
-  - "     &6事件：&f{0}"
-  - "&f"
-  - "     &8&o点击选定"
-  - "&f"
-EDIT_EVENT_NODE_AMOUNT:
-  - "     &6次数：&f{0}"
-  - "&f"
-  - "     &8&o点击编辑"
-  - "&f"
-EDIT_EVENT_NODE_NUMBER:
-  - "     &6次数：&f{0}"
-  - "&f"
-  - "     &8&o点击编辑"
-  - "&f"
-EDIT_EVENT_NODE_MOBS:
-  - "     &6MythicMobs实体编号："
-  - "__List__"
-  - "&f"
-  - "     &8&o点击编辑&f(&c多行支持&f)"
-  - "&f"
-EDIT_EVENT_NODE_NEED:
-  - "     &6所需条件："
-  - "__List__"
-  - "&f"
-  - "     &8&o点击编辑&f(&c多行支持&f)"
-  - "&f"
-EDIT_EVENT_NODE_COST:
-  - "     &6经济费用：&f{0}"
-  - "&f"
-  - "     &8&o点击编辑"
-  - "&f"
-EDIT_EVENT_NODE_ITEM:
-  - "     &6物品："
-  - "__List__"
-  - "&f"
-  - "     &8&o点击编辑&f(&c多行支持&f)"
-  - "&f"
-EDIT_EVENT_NODE_MESSAGE:
-  - "     &6消息："
-  - "__List__"
-  - "&f"
-  - "     &8&o点击编辑&f(&c多行支持&f)"
-  - "&f"
-EDIT_EVENT_NODE_CONTENT:
-  - "     &6内容："
-  - "__List__"
-  - "&f"
-  - "     &8&o点击编辑&f(&c多行支持&f)"
-  - "&f"
-EDIT_EVENT_NODE_ENTITY:
-  - "     &6实体类型："
-  - "__List__"
-  - "&f"
-  - "     &8&o点击编辑&f(&c多行支持&f)"
-  - "&f"
-EDIT_EVENT_NODE_CONDITION:
-  - "     &6条件："
-  - "__List__"
-  - "&f"
-  - "     &8&o点击编辑&f(&c多行支持&f)"
-  - "&f"
-EDIT_EVENT_NODE_CHECK:
-  - "     &6检查条件次数：&f{0}"
-  - "&f"
-  - "     &8&o点击编辑"
-  - "&f"
-EDIT_EVENT_NODE_BLOCK:
-  - "     &6方块："
-  - "__List__"
-  - "&f"
-  - "     &8&o点击编辑&f(&c多行支持&f)"
-  - "&f"
-EDIT_EVENT_NODE_ID:
-  - "     &6NPC ID："
-  - "__List__"
-  - "&f"
-  - "     &8&o点击编辑&f(&c多行支持&f)"
-  - "&f"
-EDIT_EVENT_NODE_CAUSE:
-  - "     &6死亡原因："
-  - "__List__"
-  - "&f"
-  - "     &8&o点击编辑&f(&c多行支持&f)"
-  - "&f"
-EDIT_EVENT_NODE_ENTITYLIST:
-  - "     &6捕获到的实体类型："
-  - "__List__"
-  - "&f"
-  - "     &8&o点击编辑&f(&c多行支持&f)"
-  - "&f"
-EDIT_EVENT_NODE_HOOK:
-  - "     &6钓鱼钩住的实体类型："
-  - "__List__"
-  - "&f"
-  - "     &8&o点击编辑&f(&c多行支持&f)"
-  - "&f"
-EDIT_EVENT_NODE_STATE:
-  - "     &6钓鱼状态："
-  - "__List__"
-  - "&f"
-  - "     &8&o点击编辑&f(&c多行支持&f)"
-  - "&f"
-EDIT_EVENT_NODE_EXP:
-  - "     &6所获经验(整数)：&f{0}"
-  - "&f"
-  - "     &8&o点击编辑"
-  - "&f"
-EDIT_EVENT_NODE_MATRIX:
-  - "     &6合成配方："
-  - "__List__"
-  - "&f"
-  - "     &8&o点击编辑&f(&c多行支持&f)"
-  - "&f"
-EDIT_EVENT_NODE_DIALOG:
-  - "     &6对话编号："
-  - "__List__"
-  - "&f"
-  - "     &8&o点击编辑&f(&c多行支持&f)"
-  - "&f"
-EDIT_EVENT_NODE_REPLY:
-  - "     &6回复编号："
-  - "__List__"
-  - "&f"
-  - "     &8&o点击编辑&f(&c多行支持&f)"
-  - "&f"
-EDIT_EVENT_NODE_ROOM:
-  - "     &6房间编号：&f{0}"
-  - "&f"
-  - "     &8&o点击编辑"
-  - "&f"
-
-EDIT_EVENT_TASK:
-  - "     &6定时器：&f{0}"
-  - "&f"
-  - "     &8&o点击编辑定时器编号"
-  - "&f"
-EDIT_EVENT_ASYNC:
-  - "     &6是否同步(非异步)：&f{0}"
-  - "&f"
-  - "     &8&o点击切换"
-  - "&f"
-EDIT_EVENT_PERIOD:
-  - "     &6定时器时间：&f{0}"
-  - "&f"
-  - "     &8&o点击编辑"
-  - "&f"
-EDIT_EVENT_CONDITION:
-  - "     &6定时器循环检查条件："
-  - "__List__"
-  - "&f"
-  - "     &8&o点击编辑"
-  - "&f"
-
-CONDITION_RETURN_TRUE: "&7&l[ &a条件满足 &7&l]"
-CONDITION_RETURN_FALSE: "&7&l[ &c条件不满足 &7&l]"
-CONDITION_RETURN_ERROR: "&7&l[ &c语句错误 &7&l]"
-ERROR_INFO: "     &c错误信息："
-
-SELECT_TYPE_SELF: "对自己"
-SELECT_TYPE_TEAM: "对队伍所有成员"
-SELECT_TYPE_ALL: "对所有在线玩家"
-
-QUEUE_TYPE_ACCEPT: "接受时"
-QUEUE_TYPE_FINISH: "完成时"
-QUEUE_TYPE_FAIL: "失败时"
-QUEUE_TYPE_QUIT: "放弃时"
-QUEUE_TYPE_RESET: "重置时"
-QUEUE_TYPE_TRACK: "追踪时"
-
-TIME-FRAME-WEEK-1: "一"
-TIME-FRAME-WEEK-2: "二"
-TIME-FRAME-WEEK-3: "三"
-TIME-FRAME-WEEK-4: "四"
-TIME-FRAME-WEEK-5: "五"
-TIME-FRAME-WEEK-6: "六"
-TIME-FRAME-WEEK-7: "日"
-TIME-FRAME-WEEKLY: "&8每周&f{0} {1}到&8每周&f{2} {3}"
-TIME-FRAME-MONTHLY: "&8每月&f{0}&8日&f{1}到&8每月&f{2}&8日&f{3}"
-TIME-FRAME-YEARLY: "&8每年&f{0}&8月&f{1}&8日&f{2}到&8每年&f{3}&8月&f{4}&8日&f{5}"
-TIME-FRAME-DAY: "&8每天&f{0}到&f{1}"
-
-TIME_TYPE_DAY: "DAY(每天一次)"
-TIME_TYPE_WEEKLY: "WEEKLY(每周一次)"
-TIME_TYPE_MONTHLY: "MONTHLY(每月一次)"
-TIME_TYPE_YEARLY: "YEARLY(每年一次)"
-TIME_TYPE_ALWAYS: "ALWAYS(无时限)"
-TIME_TYPE_CUSTOM: "CUSTOM(时间段)"
-
-OPEN-ON: "开启"
-OPEN-OFF: "关闭"
-
-TARGET_SELECT_NULL: "&7null &f(&7无事件&f)"
-TARGET_SELECT_BREAK_BLOCK: "&7{0} &f(&7破坏方块&f)"
-TARGET_SELECT_TASK: "&7{0} &f(&7定时器&f)"
-TARGET_SELECT_PLACE_BLOCK: "&7{0} &f(&7放置方块&f)"
-TARGET_SELECT_PASS_COLLECTION_PACKET: "&7{0} &f(&7交互允许数据包实体&f)"
-TARGET_SELECT_ENCHANT_ITEM: "&7{0} &f(&7附魔物品&f)"
-TARGET_SELECT_LEFT_NPC: "&7{0} &f(&7左键CitizensNPC&f)"
-TARGET_SELECT_RIGHT_NPC: "&7{0} &f(&7右键CitizensNPC&f)"
-TARGET_SELECT_LEFT_ADY: "&7{0} &f(&7左键Adyeshach&f)"
-TARGET_SELECT_RIGHT_ADY: "&7{0} &f(&7右键Adyeshach&f)"
-TARGET_SELECT_JOIN_CSG: "&7{0} &f(&7加入Csg-Plus副本&f)"
-TARGET_SELECT_QUIT_CSG: "&7{0} &f(&7退出Csg-Plus副本&f)"
-TARGET_SELECT_PLAYER_CHAT: "&7{0} &f(&7玩家聊天&f)"
-TARGET_SELECT_PLAYER_KILL_ENTITY: "&7{0} &f(&7玩家击杀实体&f)"
-TARGET_SELECT_PLAYER_KILL_MYTHICMOBS: "&7{0} &f(&7玩家击杀MythicMobs实体&f)"
-TARGET_SELECT_PLAYER_SEND_COMMAND: "&7{0} &f(&7玩家发送命令&f)"
-TARGET_SELECT_PLAYER_DEATH: "&7{0} &f(&7玩家死亡&f)"
-TARGET_SELECT_PLAYER_RESPAWN: "&7{0} &f(&7玩家重生&f)"
-TARGET_SELECT_PLAYER_FISH: "&7{0} &f(&7玩家钓鱼&f)"
-TARGET_SELECT_CRAFT_ITEM: "&7{0} &f(&7合成物品&f)"
-TARGET_SELECT_PLAYER_JOIN_SERVER: "&7{0} &f(&7进入服务器&f)"
-TARGET_SELECT_PLAYER_QUIT_SERVER: "&7{0} &f(&7退出服务器&f)"
-TARGET_SELECT_PLAYER_DIALOG: "&7{0} &f(&7进行对话&f)"
-TARGET_SELECT_PLAYER_REPLY: "&7{0} &f(&7对话回复选择&f)"
